# finai-flash

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_init_tables.py
app/: __init__.py  config.py  dependencies.py  lifespan.py  main.py  responses.py
app/ai/: analyzer.py  flash_analyzer.py  flash_prompts.py  ollama_client.py  parser.py  prompts.py
app/api/: flash.py
app/api/v1/: alerts.py  analysis.py  news.py  portfolio.py  settings.py
app/collectors/: base.py  cctv_finance.py  cls.py  jin10.py  reuters.py  scheduler.py
app/db/: __init__.py  init_db.py  session.py
app/db/crud/: analysis.py  news.py
app/models/: __init__.py  alert.py  analysis.py  flash_analysis.py  news.py  portfolio.py  settings.py
app/notifiers/: base.py  discord.py  dispatcher.py  telegram.py
app/services/: alert_service.py  analysis_service.py  auto_analysis.py  flash_analysis_service.py  market_data_service.py  news_service.py  portfolio_service.py  settings_service.py
app/static/: index.html
app/websocket/: events.py  manager.py
data/: finai.db
docs/: DEPLOY.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.vue
scripts/: analyze_flash_example.py  backfill_news.py  cleanup-dev.ps1  seed_portfolio.py  test_ollama.py
tests/: conftest.py  test_ai_analyzer.py  test_analysis_service.py  test_api_flash.py  test_api_news.py  test_api_settings.py  test_collectors.py  test_flash_analysis_models.py  test_news_service.py
(+8 files in other folders)
