[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finai-flash"
version = "0.1.0"
description = "Local AI financial news terminal"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "langchain>=0.2",
    "langchain-community>=0.2",
    "langchain-ollama>=0.1",
    "feedparser>=6.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "sqlmodel>=0.0.19",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    "apscheduler>=3.10",
    "python-telegram-bot>=21",
    "discord-webhook>=1.3",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "rich>=13",
    "tenacity>=8.3",
    "arrow>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27", "respx>=0.21", "ruff>=0.4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
